test/ui/tests/metadata/duplicate-entries.metadata
# TEST fail metadata

first: 23, first: "",

inner: {
    it: [],
    it: 0'000,
}
